fix overlap

--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ html, body {
   padding-right : 5%;
 }
 .name {
+ text-align: center;
  line-height: 0;
 }
 
